--- a/source/wycero-1.css
+++ b/source/wycero-1.css
@@ -1,5 +1,5 @@
 body{
-	background-color:rgba(255,250,250);
+	background-color:#deffe6;
 	color:#000000;
 	font-size:16px;
 	font-family:sans-serif;
@@ -15,7 +15,7 @@ code{
         flex-direction:row;
         width:100vw;
         height:2.6em;
-        background-color:rgba(255,0,0);
+        background-color:#0c3;
         display:flex;
 	z-index:1010;
 	box-shadow:0 0 4px 4px /*rgb(42,142,209)*/rgb(0,0,10,0.2);
@@ -35,10 +35,10 @@ a.tpi.icon-top{flex:1}
 .tpi{
 	padding-top:0.05em;font-size:200%;
 }
-a{color:rgb(228,47,38);/*text-decoration:none;*/}
-.posti{color:#A00000;text-decoration:none;}
-.posti>a{display:block;color:#A00000;text-decoration:none;text-align:center;font-size:1.5em;padding:10px;}
-.tpi{color:#A00000;text-decoration:none;}
+a{color:#008420;/*text-decoration:none;*/}
+.posti{color:#008420;text-decoration:none;}
+.posti>a{display:block;color:#008420;text-decoration:none;text-align:center;font-size:1.5em;padding:10px;}
+.tpi{color:rgba(0,0,0,0.5);text-decoration:none;}
 a.tpi{
 	transition:all 0.1s;
 }
@@ -49,7 +49,7 @@ a.tpi{
 }*/
 .tpi>.svg{height:100%;color:white;}
 .posti{
-	background-color:#FFFFFF;
+	background-color:#edfff1;
 	margin-top:10px;margin-bottom:10px;
 	padding-left:0px;padding-right:0px;
 	box-shadow:0 0 6px 1px rgba(0,0,10,0.2);
@@ -84,9 +84,9 @@ h2.postii{text-align:center;text-decoration:none;}
 	outline:none;
 }
 /*.posti>a:focus{background-color:#f0f0f0;}*/
-.posti>a:hover{box-shadow:inset 5px 0px 0px 0px #AA0000;}
-.posti>a:active{background-color:#f0f0f0;
-box-shadow:inset 5px 0px 0px 0px #AA0000;
+.posti>a:hover{box-shadow:inset 5px 0px 0px 0px #008420;}
+.posti>a:active{background-color:#deffe6;
+box-shadow:inset 5px 0px 0px 0px #008420;
 }
 h2.postii::before{display:none;}
 .article del{
@@ -111,12 +111,12 @@ code{
 	margin-left:60px;
 	margin-right:0px;
 	border-left-style:solid;
-	border-left-color:#ff0000;
+	border-left-color:#0c3;
 	border-left-width:6px;
 	padding-left:16px;
 	padding-top:4px;
 	padding-bottom:4px;
-	background-color:#ff700030;
+	background-color:#70ffa040;
 }
 .article blockquote>blockquote{
 	margin-right:10px;
@@ -136,11 +136,14 @@ code{
 	border:solid 1px #80808040;
 }
 .article,footer{
-	background-color:#FFFFFF;
+	background-color:#FFFFFF80;
 	margin-top:5px;margin-bottom:25px;
+	border-color:#00cc3352;
+	border-width:5px;
+	border-style:solid;
 	padding:8px;
-	box-shadow:0 0 6px 1px rgba(0,0,10,0.2);
-	border-radius:5px;
+	/*box-shadow:0 0 6px 1px rgba(0,0,10,0.2);*/
+	border-radius:10px;
 }
 #table-content{
 	top:2.6em;
