--- a/blog/wycero-1.css
+++ b/blog/wycero-1.css
@@ -33,7 +33,7 @@ a.tpi.icon-top{flex:2}
 	border-color:#3ec0ff;
 }
 .tpi{
-	padding-top:auto;padding-bottom:auto;font-size:1em;
+	padding-top:auto;padding-bottom:auto;font-size:1.5em;
 }
 a{color:#008420;/*text-decoration:none;*/}
 .posti{color:#008420;text-decoration:none;}
@@ -65,18 +65,19 @@ a.tpi{
 }
 .posti:hover{
 }
-.article h1,.article h2,.article h3,
-.article h4,.article h5,.article h6{display:block;text-align:left;}
-.article h1,.article h2{
+h1,h2,h3,
+h4,h5,h6{display:block;text-align:left;}
+h1,h2{
 	position:relative;
 }
-.article h1::before,.article h2::before{
+h1::before,h2::before{
 	left:0;width:100%;height:1px;
 	background-color:#80808040;
 	position:absolute;
 	content:"";
 	top:1.4em;
 }
+h1,h2{text-align:center;}
 .article h1::before{height:2px;}
 h2.postii{text-align:center;text-decoration:none;}
 .posti{position:relative;}
@@ -146,7 +147,7 @@ code{
 	border-radius:10px;
 }
 #table-content{
-	top:2.6em;
+	top:2em;
 	left:0px;
 	position:fixed;
 	margin:0px;
