--- a/blog/ferrous.css
+++ b/blog/ferrous.css
@@ -129,7 +129,7 @@ a.tpi{
 	box-shadow:0 0 6px 6px rgba(0,0,10,0.2);
 }*/
 h1,h2,h3,
-h4,h5,h6{display:block;text-align:left;}
+h4,h5,h6{display:block;text-align:left;font-variant: small-caps;;}
 h1,h2{
 	position:relative;
 }
@@ -199,9 +199,15 @@ code{
 .article tr,.article td{
 	border:solid 1px #0c3;
 }
+.article{
+	margin-top:4rem;
+}
+footer{
+	margin-left:8px;
+}
 .article,footer{
 	background-color:#FFFFFF80;
-	margin-top:5px;margin-bottom:25px;
+	margin-bottom:25px;
 	border-color:#00cc33;
 	border-width:2px;
 	border-style:solid;
@@ -221,7 +227,7 @@ code{
         background-color:rgba(255,0,0);
         display:flex;*/
 	z-index:1011;
-	background-color:#000000F0;
+	background-color:#000000A0;
 	max-height:100%;height:100%;
 	max-width:40%;width:40%;
 }
@@ -250,7 +256,7 @@ code{
 	content:">";
 	background-color:white;
 	color:black;
-	border-radius:25%;
+	border-radius:10%;
 	padding:4px;
 	margin-right:16px;
 
@@ -264,10 +270,16 @@ code{
 a.tpi.icon-top.primary{
   background-color:#00e63a;
 }
-a.tpi.icon-top.primary:hover,a.tpi.icon-top.primary:active,a.tpi.icon-top.primary:focus{
+a.tpi.icon-top.primary:focus,a.tpi.icon-top.primary:hover{
   background-color:#00fd3f;
 }
-a.tpi.icon-top:hover,a.tpi.icon-top:active,a.tpi.icon-top:focus{
+a.tpi.icon-top.primary:active{
+	background-color:#00e63a;
+}
+a.tpi.icon-top:hover{
+	background-color:#1f1f1f;
+}
+a.tpi.icon-top:active,a.tpi.icon-top:focus{
 	background-color:black;
 }
 a.tpi.icon-top:hover>.svg,a.tpi.icon-top:active>.svg,a.tpi.icon-top:focus>.svg{
@@ -285,10 +297,44 @@ a.tpi.icon-top:hover>.svg,a.tpi.icon-top:active>.svg,a.tpi.icon-top:focus>.svg{
 	width: 2em;
 	height: 120%;
 	top: 0px;
-	left: -10%;
+	left: -100%;
 	transform: skewX(-20deg);
 	display:block;
 	animation:movelight 2s ease-in-out infinite;
 	/*animation-delay:1s;*/
 	/* overflow: visible; */
+}
+body{
+	margin:0;
+}
+body>*{
+	margin-left:8px;margin-right:8px;
+}
+.frontpage-inner{
+	display:flex;
+	flex-flow:column;
+	width:100%;height:100%;
+	background-color:#00cc3380;
+	text-align:center;
+	font-size:2em;
+	color:#00e63a;
+	font-variant: small-caps;
+}
+.frontpage{
+	/*position:absolute;*/
+	margin-left:0;margin-right:0;margin-bottom:1.4em;
+	margin-top:2.6em;
+	top:2.6em;
+	width:100vw;
+	left:0;
+	height:60vh;
+	background-image:url("./himg.jpg");
+	background-size:cover;
+	background-repeat:bo-repeat;
+}
+.frontpage-inner h1{
+	flex:2;
+}
+.frontpage-inner strong{
+	flex:1;
 }
