--- a/blog/ferrous.css
+++ b/blog/ferrous.css
@@ -102,8 +102,8 @@ a.tpi{
 .posti-group>.posti:hover{
 	box-shadow:none;
 }
-.article,footer{position:relative;}
-.posti.alone::before,.posti-group>.posti:first-child::before,.article::before,footer::before{
+.article,footer,.container{position:relative;}
+.posti.alone::before,.posti-group>.posti:first-child::before,.article::before,footer::before,.container::before{
 	content:"";
 	position:absolute;
 	width:0px;
@@ -114,7 +114,7 @@ a.tpi{
 	border-bottom:5px solid transparent;
 	top:0px;left:0px;
 }
-.posti.alone::after,.posti-group>.posti:last-child::after,.article::after,footer::after{
+.posti.alone::after,.posti-group>.posti:last-child::after,.article::after,footer::after,.container::after{
 	content:"";
 	position:absolute;
 	width:0px;
@@ -202,10 +202,10 @@ code{
 .article{
 	margin-top:4rem;
 }
-footer{
+/*footer{
 	margin-left:8px;
-}
-.article,footer{
+}*/
+.article,footer,.container{
 	background-color:#FFFFFF80;
 	margin-bottom:25px;
 	border-color:#00cc33;
@@ -267,13 +267,13 @@ footer{
 .tpi{
   color:white;
 }
-a.tpi.icon-top.primary{
+.primary{
   background-color:#00e63a;
 }
-a.tpi.icon-top.primary:focus,a.tpi.icon-top.primary:hover{
+.primary:focus,.primary:hover,a.tpi.icon-top.primary:hover{
   background-color:#00fd3f;
 }
-a.tpi.icon-top.primary:active{
+.primary:active,a.tpi.icon-top.primary:active{
 	background-color:#00e63a;
 }
 a.tpi.icon-top:hover{
@@ -289,8 +289,8 @@ a.tpi.icon-top:hover>.svg,a.tpi.icon-top:active>.svg,a.tpi.icon-top:focus>.svg{
 .icon-top{
 	position:relative;
 }
-.icon-top.primary:hover:before,.icon-top.primary:active:before,.icon-top.primary:focus:before {
-/*.icon-top:hover:before,.icon-top:active:before,.icon-top:focus:before {*/
+/*.primary:hover:before,.primary:active:before,.primary:focus:before {
+.icon-top:hover:before,.icon-top:active:before,.icon-top:focus:before {
 	position: absolute;
 	background-image: linear-gradient(to right,transparent,#ffffffff,transparent);
 	content: "";
@@ -301,40 +301,43 @@ a.tpi.icon-top:hover>.svg,a.tpi.icon-top:active>.svg,a.tpi.icon-top:focus>.svg{
 	transform: skewX(-20deg);
 	display:block;
 	animation:movelight 2s ease-in-out infinite;
-	/*animation-delay:1s;*/
-	/* overflow: visible; */
-}
-body{
-	margin:0;
-}
-body>*{
-	margin-left:8px;margin-right:8px;
-}
+}*/
 .frontpage-inner{
 	display:flex;
 	flex-flow:column;
 	width:100%;height:100%;
 	background-color:#00842080;
 	text-align:center;
-	font-size:2em;
+	font-size:1.5em;
 	color:#00e63a;
 	font-variant: small-caps;
 }
 .frontpage{
-	/*position:absolute;*/
+	position:fixed;
 	margin-left:0;margin-right:0;margin-bottom:1.4em;
-	margin-top:2.6em;
-	top:2.6em;
 	width:100vw;
+	top:0;
 	left:0;
-	height:60vh;
+	z-index:1012;
+	height:100vh;
 	background-image:url("./himg.jpg");
 	background-size:cover;
-	background-repeat:bo-repeat;
+	background-repeat:no-repeat;
+	transition:all 0.5s;
 }
 .frontpage-inner h1{
-	flex:2;
+	flex:4;
 }
 .frontpage-inner strong{
-	flex:1;
+	flex:2;
+}
+.frontpage-inner .primary{
+	display:block;
+	padding-top:1em;
+	padding-bottom:1em;
+	color:rgba(255,255,255,0.9);
+	font-weight:bold;
+}
+.frontpage-inner .primary:hover{
+	color:rgba(255,255,255,1);
 }
