--- a/source/ferrous.css
+++ b/source/ferrous.css
@@ -357,3 +357,4 @@ a.tpi.icon-top:hover>.svg,a.tpi.icon-top:active>.svg,a.tpi.icon-top:focus>.svg{
 	bottom:0;
 	left:0;
 }
+ul.posti-group{padding:0px;}
